--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,18 @@
-version: 2.1
-
 orbs:
-  android: circleci/android@0.2.1
+  android: circleci/android@2.0
 
 jobs:
   build:
-    docker:
-      - image: circleci/openjdk:17-jdk  # Use Java 17
+    executor:
+      name: android/default
+      tag: 33.0.2-node
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-17-openjdk
     steps:
       - checkout
       - run:
           name: Verify Java Version
-          command: java -version  # Confirm it's Java 17
-      - restore_cache:
-          key: android-orb-v1-
+          command: java -version
       - run:
-          name: Chmod permissions
-          command: sudo chmod +x ./gradlew
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          key: 'android-orb-v1-{{ epoch }}'
-          paths:
-            - ~/.android/build-cache
-            - ~/.android/cache
-      - run:
-          name: Run Build
+          name: Build App
           command: ./gradlew build
-      - store_artifacts: 
-          path: app/build/reports
-          destination: reports
-      - run:
-          name: Run Tests
-          command: ./gradlew lint test
-      - store_test_results:
-          path: app/build/test-results
-      - store_artifacts:  
-          path: app/build/outputs/apk/debug/
-          destination: artifact-file
