--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,42 @@
+version: 2.1
+
 orbs:
-  android: circleci/android@2.0
+  android: circleci/android@0.2.1
+
+executors:
+  android-executor:
+    docker:
+      - image: circleci/android:api-30
 
 jobs:
   build:
-    executor:
-      name: android/default
-      tag: 33.0.2-node
-    environment:
-      JAVA_HOME: /usr/lib/jvm/java-17-openjdk
+    executor: android-executor
     steps:
       - checkout
+      - restore_cache:
+          key: android-orb-v1-{{ checksum "build.gradle" }}
       - run:
-          name: Verify Java Version
-          command: java -version
+          name: Set Gradlew Permissions
+          command: chmod +x ./gradlew
       - run:
-          name: Build App
-          command: ./gradlew build
+          name: Download Dependencies
+          command: ./gradlew dependencies
+      - save_cache:
+          key: android-orb-v1-{{ epoch }}
+          paths:
+            - ~/.gradle/caches/
+            - ~/.gradle/wrapper/
+      - run:
+          name: Build Application
+          command: ./gradlew assembleDebug
+      - store_artifacts:
+          path: app/build/outputs/apk/debug/
+          destination: apk
+      - run:
+          name: Run Lint and Unit Tests
+          command: ./gradlew lint test
+      - store_test_results:
+          path: app/build/test-results/
+      - store_artifacts:
+          path: app/build/reports/
+          destination: reports
