--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,40 +3,35 @@ version: 2.1
 orbs:
   android: circleci/android@0.2.1
 
-executors:
-  android-executor:
-    docker:
-      - image: circleci/android:api-30
-
 jobs:
   build:
-    executor: android-executor
+    executor: android/android
     steps:
       - checkout
       - restore_cache:
-          key: android-orb-v1-{{ checksum "build.gradle" }}
+          key: android-orb-v1-
       - run:
-          name: Set Gradlew Permissions
-          command: chmod +x ./gradlew
+          name: Chmod permissions
+          command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
-          command: ./gradlew dependencies
+          command: ./gradlew androidDependencies
       - save_cache:
-          key: android-orb-v1-{{ epoch }}
+          key: 'android-orb-v1-{{ epoch }}'
           paths:
-            - ~/.gradle/caches/
-            - ~/.gradle/wrapper/
+            - ~/.android/build-cache
+            - ~/.android/cache
       - run:
-          name: Build Application
-          command: ./gradlew assembleDebug
+          name: Run Build
+          command: ./gradlew build
       - store_artifacts:
-          path: app/build/outputs/apk/debug/
-          destination: apk
+          path: app/build/reports
+          destination: reports
       - run:
-          name: Run Lint and Unit Tests
+          name: Run Tests
           command: ./gradlew lint test
       - store_test_results:
-          path: app/build/test-results/
+          path: app/build/test-results
       - store_artifacts:
-          path: app/build/reports/
-          destination: reports
+          path: app/build/outputs/apk/debug/
+          destination: artifact-file
