--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,21 @@
 version: 2.1
 
 orbs:
-  android: circleci/android@0.2.1
+  android: circleci/android@2.3.0
 
 jobs:
   build:
-    executor: 
-      name: android/android
-      resource-class: medium
-      environment:
-        JAVA_HOME: /usr/lib/jvm/java-17-openjdk
-        PATH: /usr/lib/jvm/java-17-openjdk/bin:<< pipeline.parameters.default-path >>
+    docker:
+      - image: cimg/android:2023.08
     steps:
       - checkout
       - restore_cache:
           key: android-orb-v1-
       - run:
           name: Chmod permissions
-          command: sudo chmod +x ./gradlew
+          command: chmod +x ./gradlew
       - run:
-          name: Download Dependencies
+          name: Download Depedencies
           command: ./gradlew androidDependencies
       - save_cache:
           key: 'android-orb-v1-{{ epoch }}'
@@ -29,14 +25,6 @@ jobs:
       - run:
           name: Run Build
           command: ./gradlew build
-      - store_artifacts:
-          path: app/build/reports
-          destination: reports
-      - run:
-          name: Run Tests
-          command: ./gradlew lint test
-      - store_test_results:
-          path: app/build/test-results
       - store_artifacts:
           path: app/build/outputs/apk/debug/
           destination: artifact-file
