--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@
 ## thereby reducing the size of the R class for that library
 #android.nonTransitiveRClass=true
 
-
+android.suppressUnsupportedCompileSdk=35
 org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
