--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+android.disableMinifyLocalDependenciesForLibraries=false
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
